# ShortLang

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  docs.md  main.sl  rust-toolchain.toml
.github/workflows/: check.yml
examples/: brainfuck_interpreter.sl  factorial.sl  fibonacci.sl  fizzbuzz.sl  functions.sl  guess_the_number.sl  simple_calculator.sl  sqrt.sl
macros/src/: lib.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs  structs.rs
src/: analyzer.rs  errors.rs  formatter.rs  lib.rs  main.rs  name_generator.rs  optimizer.rs  parser.rs  span.rs  std.sl
src/examples/: hello_world.sl
src/vm/: bytecode.rs  macros.rs  memory.rs  mod.rs  utils.rs  value.rs  vm.rs
src/vm/stdlib/: basic.rs  macros.rs  math.rs  mod.rs  os.rs  utils.rs
src/vm/stdlib/functions/: basic.rs  macros.rs  math.rs  mod.rs  os.rs
src/vm/stdlib/methods/: basic.rs  file.rs  macros.rs  math.rs  mod.rs
std/: std.sl
value-ty/: Cargo.toml
value-ty/src/: lib.rs
