[package]
name = "short_lang"
version = "0.1.0"
edition = "2021"
authors = ["Pranjal Patel <pranjalpatel@duck.com>", "Hamza <hamzaoubrahim51@gmail.com>", "FirePlank <contact@fireplank.xyz>"]
description = "A programming language designed for code golfing."
repository = "https://github.com/ShortLang/ShortLang/"
license = "GPL-3.0-only"
readme = "README.md"

[[bin]]
name = "ShortLang"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
lazy_static = "1.4.0"
logos = "0.13.0"
miette = {version = "5.10.0", features = ["fancy"]}

[dependencies.rug]
version = "1.22.0"
default-features = false
features = ["integer", "float"]
