[package]
name = "shortlang"
version = "0.4.0"
edition = "2021"
authors = ["The ShortLang Team"]
description = "A programming language designed for code golfing."
repository = "https://github.com/ShortLang/ShortLang/"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
logos = "0.13.0"
miette = { version = "5.10.0", features = ["fancy"] }
fastrand = "2.0.1"
az = "1.2.1"
rustyline = "13.0.0"

[dependencies.rug]
version = "1.24.0"
default-features = false
features = ["integer", "float"]
